--- a/experiments/cnn/configs/all.yaml
+++ b/experiments/cnn/configs/all.yaml
@@ -3,7 +3,7 @@ data:
   train_N: 1500
   train_input_file: 'FDNS_big_train.mat'
   train_output_file: 'FDNS PI_train.mat'
-  keys: ['psi', 'omega']
+  keys: ['psi', 'omega', 'u', 'v', 'tau11GM4', 'tau12GM4', 'tau22GM4']
 dataloader_train:
   batch_size: 128
   shuffle: true
@@ -16,7 +16,7 @@ checkpoint:
   save_top_k: 3
   monitor: 'loss'
   mode: 'min'
-  filename: 'cnn-orig-{epoch:02d}'
+  filename: 'cnn-all-{epoch:02d}'
   dirpath: 'checkpoints'
 trainer:
   max_epochs: 1000
@@ -24,5 +24,5 @@ optimizer:
   lr: 0.00002
 wandb:
   project: 'awd-dev'
-  name: 'cnn-orig'
+  name: 'cnn-all'
   group: 'cnn'
