--- a/experiments/cnn/configs/orig-resid-gm4-small1.yaml
+++ b/experiments/cnn/configs/orig-resid-gm4-small1.yaml
@@ -4,6 +4,7 @@ data:
   train_input_file: 'FDNS_big_train.mat'
   train_output_file: 'FDNS PI_train.mat'
   keys: ['psi', 'omega']
+residual: 'gm4'
 dataloader_train:
   batch_size: 128
   shuffle: true
@@ -13,14 +14,14 @@ dataloader_val:
   shuffle: false
   num_workers: 2
 cnn:
-  l1: 64
+  l1: 32
   l2: 5
   n_hidden_layers: 5
 checkpoint:
   save_top_k: 3
   monitor: 'loss'
   mode: 'min'
-  filename: 'cnn-orig-{epoch:02d}'
+  filename: 'cnn-orig-resid-gm2-{epoch:02d}'
   dirpath: 'checkpoints'
 trainer:
   max_epochs: 4000
@@ -28,5 +29,5 @@ optimizer:
   lr: 0.00002
 wandb:
   project: 'awd-dev'
-  name: 'cnn-orig'
+  name: 'cnn-orig-resid-gm2'
   group: 'cnn'
