--- a/experiments/cnn/configs/orig-resid-gm2.yaml
+++ b/experiments/cnn/configs/orig-resid-gm2.yaml
@@ -13,6 +13,10 @@ dataloader_val:
   batch_size: 128
   shuffle: false
   num_workers: 2
+cnn:
+  l1: 64
+  l2: 5
+  n_hidden_layers: 7
 checkpoint:
   save_top_k: 3
   monitor: 'loss'
