--- a/experiments/online/configs/2025-03-01-d.yaml
+++ b/experiments/online/configs/2025-03-01-d.yaml
@@ -1,4 +1,5 @@
 # short-term DNS run
+# SETTING A
 
 sgsmodel: nosgs
 
@@ -7,7 +8,7 @@ resolution: 1024
 boilerplate: boilerplate
 
 # Total time to run
-tTotal: 5
+tTotal: 10
 # Time interval at which to save
 tSAVE: 5.0e-2
 ICNum: A0
