--- a/experiments/online/configs/2025-03-01-g.yaml
+++ b/experiments/online/configs/2025-03-01-g.yaml
@@ -7,7 +7,7 @@ library: onnx
 input_stepnorm: True
 
 physics: re20k-kf25
-resolution: 128
+resolution: normal
 boilerplate: boilerplate
 
 # Total time to run
