--- a/experiments/online/configs/2025-03-09-e.yaml
+++ b/experiments/online/configs/2025-03-09-e.yaml
@@ -6,7 +6,7 @@ library: onnx
 input_stepnorm: True
 
 physics: re20k-kf4
-resolution: coarsetime
+resolution: normal
 boilerplate: boilerplate
 
 # Total time to run
