--- a/experiments/online/configs/2025-06-09-a.yaml
+++ b/experiments/online/configs/2025-06-09-a.yaml
@@ -9,9 +9,11 @@ cnn: [2025-03-01-b_epoch1300, 2025-03-01-b_epoch1200]
 library: onnx
 input_stepnorm: True
 
-mixing_var: omega
-mixing_quantile: 0.2
-mixing_quantile_mode: 'firstcnnabove'
+mixing:
+  mode: 'quantile'
+  quantile: 0.2
+  var: 'omega'
+  quantile_mode: 'firstcnnabove'
 
 physics: re20k-kf25
 resolution: normal
