--- a/experiments/online/configs/2025-06-22-a.yaml
+++ b/experiments/online/configs/2025-06-22-a.yaml
@@ -1,19 +1,17 @@
 # short-term residual CNN run A->A
 # an ablation study.
-# the over-trained 2025-03-01-b_epoch1300 is used for high-omega regions,
-# and the good 2025-03-01-b_epoch1200 is used for low-omega regions
-# (bottom 80%)
+# the over-trained 2025-03-01-b_epoch1300 is used for middle regions,
+# and the good 2025-03-01-b_epoch1200 is used for edge regions
 
 sgsmodel: cnn
 cnn: [2025-03-01-b_epoch1300, 2025-03-01-b_epoch1200]
 library: onnx
 input_stepnorm: True
 
+# first cnn used for middle, second cnn used for edge
 mixing:
-  mode: 'quantile'
-  quantile: 0.8
-  var: 'omega'
-  quantile_mode: 'firstcnnabove'
+  mode: 'edge'
+  edge_width: 6
 
 physics: re20k-kf25
 resolution: normal
